--- a/hotel-website/about.html
+++ b/hotel-website/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-
+    <link rel="stylesheet" and href="/css/mobile.css" />
     <title>Hotel | About</title>
   </head>
   <body>
@@ -70,7 +70,7 @@
       </div>
     </section>
 
-    <footer id="main-footer">
+    <footer id="main-footer-about">
       <p>Hotel BT &copy; 2021 All Rights Reserved.</p>
     </footer>
   </body>
