--- a/hotel-website/index.html
+++ b/hotel-website/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
-
+    <link rel="stylesheet" and href="/css/mobile.css" />
     <title>Hotel WebSite</title>
   </head>
   <body>
