--- a/hotel-website/contact.html
+++ b/hotel-website/contact.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" and href="/css/mobile.css" />
 
     <title>Hotel | Contact</title>
   </head>
